🔨 Refact: Remove string template code.